refactor(alt): change grub logo

--- a/cfg/grub.cfg
+++ b/cfg/grub.cfg
@@ -295,14 +295,14 @@ function grub_reboot {
 function grub_bios_installed {
     if ! is_efi;  then
         menuentry "" {true}
-        menuentry --class=garuda "Installed BIOS-System on $installed" {exit}
+        menuentry --class=snigdhaos "Installed BIOS-System on $installed" {exit}
     fi
 }
 
 function grub_efi_installed {
     if is_efi; then
         menu "" {true}
-        menu --class=garuda "Installed EFI-System on $installed" {exit}
+        menu --class=snigdhaos "Installed EFI-System on $installed" {exit}
     fi
 }
 
